<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/inputFrTitle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:text="@string/unos_novog_prihoda_ili_rashoda"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/inputLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputFrTitle">

        <Spinner
            android:id="@+id/inputSpinner"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp" />


        <EditText
            android:id="@+id/titleEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:hint="@string/naslov"
            android:inputType="text" />

        <EditText
            android:id="@+id/amountEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:hint="@string/kolicina"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/inputCb"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/audio" />


    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/inputFc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/submitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputLinear" />

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        android:text="@string/dodaj_u_listu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputFc" />


</androidx.constraintlayout.widget.ConstraintLayout>