<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditFinanceActivity">

    <TextView
        android:id="@+id/editTv"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:text="@string/podaci_o_korisniku"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/editDollar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/editDollar"
        style="@style/DollarSign"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginVertical="20dp"
        android:src="@drawable/ic_dollar_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTv" />

    <LinearLayout
        android:id="@+id/editLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="40dp"
        android:orientation="vertical"
        android:padding="20dp"
        android:paddingHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editDollar">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/ime_"
                android:textSize="24sp" />


            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:inputType="text"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/prezime_"
                android:textSize="24sp" />


            <EditText
                android:id="@+id/surnameEdit"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:inputType="text"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginVertical="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/banka"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/bankEdit"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/primaryDarkColor"
        android:text="@string/odustani"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editLinear" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/primaryDarkColor"
        android:text="@string/sacuvaj"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnCancel"
        app:layout_constraintTop_toBottomOf="@id/editLinear" />

</androidx.constraintlayout.widget.ConstraintLayout>