<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/balanceTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/pregled_ukupnog_stanja_racuna"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/balanceLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/balanceLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="200dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/balanceTitle">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/BalanceTextView"
                android:text="@string/prihod"

                android:textColor="@color/green" />

            <TextView
                android:id="@+id/balanceIncomeSum"
                style="@style/BalanceTextView"
                android:layout_marginStart="0dp"
                android:textColor="@color/green" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/BalanceTextView"
                android:text="@string/rashod"
                android:textColor="@color/secondaryDarkColor" />

            <TextView
                android:id="@+id/balanceExpensesSum"
                style="@style/BalanceTextView"
                android:layout_marginStart="0dp"
                android:textColor="@color/secondaryDarkColor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                style="@style/BalanceTextView"
                android:text="@string/razlika" />

            <TextView
                android:id="@+id/balanceDifference"
                style="@style/BalanceTextView"
                android:layout_marginStart="0dp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>